<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/navigation_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_service"
        android:enabled="true"
        android:icon="@drawable/service"
        android:title="@string/navigation_service"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_personal"
        android:enabled="true"
        android:icon="@drawable/personal"
        android:title="@string/navigation_personal"
        app:showAsAction="ifRoom" />
</menu>