<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_5">

    <TextView
        android:id="@+id/password_for_back"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0.5dp"
        android:background="@drawable/top_circle"
        android:gravity="center"
        android:text="@string/for_back_password"
        android:textColor="@color/cardview_dark_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/message_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/message_login"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/bottom_circle"
        android:gravity="center"
        android:text="@string/message_login"
        android:textColor="@color/cardview_dark_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/conner_circle"
        android:gravity="center"
        android:text="@string/cancle"
        android:textColor="@color/cardview_dark_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
