<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:layout_editor_absoluteY="81dp">

    <com.sinelead.syld_phone.view.wigdet.ClearEditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_login"
        android:drawableStart="@drawable/login_user"
        android:drawableLeft="@drawable/login_user"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/user_name"
        android:maxLength="30"
        android:paddingLeft="@dimen/margin_15"
        android:paddingRight="@dimen/margin_15"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="@color/colorGrayWhite"
        android:textColorHint="@color/colorGrayWhite"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/textSize_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school"
        app:layout_constraintVertical_bias="0.06999999" />

    <com.sinelead.syld_phone.view.wigdet.ClearEditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_login"
        android:drawableStart="@drawable/login_password"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="@dimen/margin_15"
        android:paddingRight="@dimen/margin_15"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/colorGrayWhite"
        android:textColorHint="@color/colorGrayWhite"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/textSize_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:theme="@style/Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:text="@string/forget_password"
        android:textColor="@drawable/login_text_press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resgister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/resgister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/resgister"
        android:textColor="@drawable/login_text_press"
        app:layout_constraintBottom_toBottomOf="@+id/forget"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/forget"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGrayWhite"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/or" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/colorGrayWhite"
        android:textSize="@dimen/textSize_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget"
        app:layout_constraintVertical_bias="0.45" />

    <View
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorGrayWhite"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or" />

    <ImageView
        android:id="@+id/wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/wechat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/wechat" />

    <com.sinelead.syld_phone.view.wigdet.Spinner
        android:id="@+id/school"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_login"
        android:drawableStart="@drawable/login_user"
        android:drawableLeft="@drawable/login_user"
        android:drawablePadding="@dimen/margin_10"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_15"
        android:paddingRight="@dimen/margin_15"
        android:textColor="@color/colorGrayWhite"
        android:textSize="@dimen/textSize_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintVertical_bias="0.13999999" />

</android.support.constraint.ConstraintLayout>
